# email-triage-openenv

./: Dockerfile  README.md  __init__.py  app.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
baseline/: run_baseline.py
env/: email_data.py  email_env.py  models.py
env/graders/: __init__.py  task1_grader.py  task2_grader.py  task3_grader.py
server/: app.py
tasks/: task1.yaml  task2.yaml  task3.yaml
tests/: test_env.py
