[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "email-triage-openenv"
version = "1.0.0"
description = "A real-world OpenEnv-compliant email triage environment for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["openenv", "reinforcement-learning", "email", "triage", "agent"]

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.7.1",
    "openai>=1.30.1",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://huggingface.co/spaces/siddharth-sisodia/email-triage-openenv"
Repository = "https://huggingface.co/spaces/siddharth-sisodia/email-triage-openenv"

[tool.setuptools.packages.find]
where = ["."]
include = ["env*"]

[project.scripts]
email-triage-env = "env.email_env:EmailTriageEnv"